	PR c++/11961: 	* dwarf2read.c (new_symbol_full) <DW_TAG_template_type_param>: 	Don't set TYPE_NAME on the type.